# cann-cann-samples

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  requirements.txt
Samples/0_Introduction/matmul/: CMakeLists.txt  README.md  main.cpp
Samples/0_Introduction/vector_add/: CMakeLists.txt  main.cpp
Samples/1_Features/hif8/: CMakeLists.txt
Samples/1_Features/instruction_optimization/n_buffer/: CMakeLists.txt  README.md  main.cpp
Samples/1_Features/instruction_optimization/unit_flag/: CMakeLists.txt  README.md  main.cpp
Samples/1_Features/memory_optimization/swat/: CMakeLists.txt  README.md  main.cpp
Samples/1_Features/simt/: CMakeLists.txt  README.md  main.cpp
Samples/1_Features/system_optimization/tail_balancer/: CMakeLists.txt  README.md  main.cpp
Samples/1_Features/vector_function/: CMakeLists.txt  README.md
Samples/2_Performance/: CMakeLists.txt  README.md
Samples/2_Performance/full_quant_fused_infer_attention_score_story/: CMakeLists.txt
Samples/2_Performance/full_quant_fused_infer_attention_score_story/common/golden/: gen_data.py  verify_result.py
Samples/2_Performance/full_quant_fused_infer_attention_score_story/examples/: full_quant_fused_infer_attention_score_template.cpp
Samples/2_Performance/full_quant_fused_infer_attention_score_story/include/block/: flash_attention_score_tiling_regbase.h
Samples/2_Performance/grouped_matmul_story/: CMakeLists.txt
Samples/2_Performance/grouped_matmul_story/common/host_utils/: common_utils.h  io_utils.h
Samples/2_Performance/grouped_matmul_story/common/kernel_utils/: common_utils.h
Samples/2_Performance/grouped_matmul_story/grouped_matmul_recipes/: CMakeLists.txt
Samples/2_Performance/grouped_matmul_story/grouped_matmul_recipes/examples/quant_grouped_matmul_mxfp4/: README.md  quant_grouped_matmul_mxfp4_split_m.cpp
Samples/2_Performance/grouped_matmul_story/grouped_matmul_recipes/include/block/: block_scheduler_utils.h  quant_grouped_matmul_mxfp4_block_mmad_split_m.h  quant_grouped_matmul_mxfp4_block_scheduler_split_m.h
Samples/2_Performance/grouped_matmul_story/grouped_matmul_recipes/include/kernel/: quant_grouped_matmul_mxfp4_kernel_split_m.h
Samples/2_Performance/matmul_story/: CMakeLists.txt  README.md
Samples/2_Performance/matmul_story/common/kernel_utils/: common_utils.h
Samples/2_Performance/matmul_story/docs/: matmul_performance.md  quant_matmul_mx_performance.md  quant_matmul_mxfp4_performance.md  quant_matmul_mxfp4_tutorials.md
Samples/2_Performance/matmul_story/examples/: CMakeLists.txt  quant_matmul_template_aswt.cpp
Samples/2_Performance/matmul_story/examples/quant_matmul_mxfp4/: CMakeLists.txt  quant_matmul_template_aswt.cpp
Samples/2_Performance/matmul_story/include/block/: block_mmad_mx.h  block_scheduler_mx.h  block_scheduler_policy.h  block_scheduler_utils.h
Samples/2_Performance/matmul_story/include/kernel/: quant_matmul_mx_kernel_aswt_impl.h
Samples/2_Performance/matmul_story/include/policy/: dispatch_policy.h
Samples/2_Performance/matmul_story/include/utils/: coord_utils.h  quant_matmul_constant.h  quant_matmul_tiling_data.h
Samples/2_Performance/matmul_story/matmul_recipes/: CMakeLists.txt  README.md
Samples/2_Performance/matmul_story/matmul_recipes/docs/: matmul_performance.md  quant_matmul_mxfp4_performance.md
Samples/2_Performance/matmul_story/matmul_stubs/: README.md
Samples/2_Performance/matmul_story/matmul_tutorials/: CMakeLists.txt  README.md
Samples/2_Performance/matmul_story/matmul_tutorials/0_naive/: CMakeLists.txt  matmul_tutorial_mxfp4_base.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/1_pingpong/: CMakeLists.txt  matmul_tutorial_mxfp4_openpingpong.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/2_block_swat/: CMakeLists.txt  matmul_tutorial_mxfp4_swat.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/3_block_swat/: matmul_tutorial_mxfp4_swat.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/3_last_round_tile_balance/: CMakeLists.txt  matmul_tutorial_mxfp4_swat_balance.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/4_last_round_tile_balance/: matmul_tutorial_mxfp4_swat_balance.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/4_unit_flag/: CMakeLists.txt  matmul_tutorial_mxfp4_swat_unitflag.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/5_halfl1_ping_halfl1_pong/: CMakeLists.txt  matmul_tutorial_mxfp4_splithalfl1.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/5_unit_flag/: matmul_tutorial_mxfp4_swat_unitflag.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/6_scale_memory_access_coalescing/: CMakeLists.txt  matmul_tutorial_mxfp4_scale_once_load_mulblock.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/7_fullload/: CMakeLists.txt  matmul_tutorial_mxfp4_a_mul_fullload.cpp
Samples/2_Performance/matmul_story/matmul_tutorials/golden/: gen_data.py
Samples/2_Performance/matmul_story/matmul_tutorials/scripts/: run.sh  verify_result.py
Samples/2_Performance/moe_dispatch_and_combine_story/: CMakeLists.txt  README.md
Samples/2_Performance/moe_dispatch_and_combine_story/include/: moe_distribute_combine.h  moe_distribute_dispatch.h  moe_distribute_dispatch_non_quant.h  moe_distribute_dispatch_quant.h
Samples/2_Performance/moe_dispatch_and_combine_story/scripts/: gen_data.py  verify_result.py
Samples/2_Performance/moe_dispatch_and_combine_story/src/: 0_non_quant_naive.cpp  dispatch_and_combine_final.cpp
Samples/2_Performance/moe_init_routing_story/: CMakeLists.txt  README.md
Samples/2_Performance/moe_init_routing_story/include/: moe_kernel_common.h  moe_mrgsort.h  moe_mrgsort_out.h  moe_tiling_def.h  moe_util.h
Samples/2_Performance/moe_init_routing_story/src/: moe_init_routing_final.cpp
Samples/2_Performance/moe_init_routing_story/utils/: gen_data.py
Samples/2_Performance/rms_norm_quant_story/: CMakeLists.txt
Samples/2_Performance/rms_norm_quant_story/src/: 0_naive.cpp  1_per_load_gamma.cpp  2_multi_core.cpp  3_vf.cpp  4_double_buffer.cpp  5_ub_utilization.cpp
(+146 files in other folders)
